// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EthErc20Vault can deposit and mint osToken in one transaction 1`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 211488,
}
`;

exports[`EthErc20Vault can deposit and mint osToken in one transaction 2`] = `
Object {
  "calldataByteLength": 100,
  "gasUsed": 177204,
}
`;

exports[`EthErc20Vault can update state, deposit, and mint osToken in one transaction 1`] = `
Object {
  "calldataByteLength": 292,
  "gasUsed": 238074,
}
`;

exports[`EthErc20Vault deposit emits transfer event 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 71030,
}
`;

exports[`EthErc20Vault deposit through receive fallback function emits transfer event 1`] = `
Object {
  "calldataByteLength": 4,
  "gasUsed": 78310,
}
`;

exports[`EthErc20Vault enter exit queue emits transfer event 1`] = `
Object {
  "calldataByteLength": 68,
  "gasUsed": 93466,
}
`;

exports[`EthErc20Vault update exit queue emits transfer event 1`] = `
Object {
  "calldataByteLength": 196,
  "gasUsed": 139835,
}
`;
